h1 h2 section ./index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!--підвал-->
 
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
 
       <address>
         <ul>
