--- a/portfolio.html
+++ b/portfolio.html
@@ -29,19 +29,15 @@
 
     <main>
       <section>
-        <ul>
+        <h1>
           <button type="button">Усі</button>
           <button type="button">Веб-сайти</button>
           <button type="button">Додатки</button>
           <button type="button">Дизайн</button>
           <button type="button">Маркетинг</button>
-        </ul>
-      </section>
+        </h1>
 
-      <!-- проекти -->
-
-      <section>
-        <h2>Проекти</h2>
+        <!-- проекти -->
 
         <ul>
           <li>
@@ -50,7 +46,7 @@
               alt="Веб-сайт на якому зоображені викладачі дві жінки і чоловік"
               width="400"
             />
-            <h3>Технокряк</h3>
+            <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
 
@@ -60,7 +56,7 @@
               alt="два баскетболіста боряться за мяч"
               width="400"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
+            <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
 
@@ -70,7 +66,7 @@
               alt="логотип ресторану на фоні риба"
               width="400"
             />
-            <h3>Ресторан Seafood</h3>
+            <h2>Ресторан Seafood</h2>
             <p>Додаток</p>
           </li>
 
@@ -80,7 +76,7 @@
               alt="чорні вакуумні навушники"
               width="400"
             />
-            <h3>Проєкт Prime</h3>
+            <h2>Проєкт Prime</h2>
             <p>Маркетинг</p>
           </li>
 
@@ -90,7 +86,7 @@
               alt="дві коробки білого і коричневого кольору"
               width="400"
             />
-            <h3>Проєкт Boxes</h3>
+            <h2>Проєкт Boxes</h2>
             <p>Додаток</p>
           </li>
 
@@ -100,7 +96,7 @@
               alt="компютер з зображенням сайту"
               width="400"
             />
-            <h3>Inspiration has no Borders</h3>
+            <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
 
@@ -110,13 +106,13 @@
               alt="відкритий журнал зі статтями та зоображеннями"
               width="400"
             />
-            <h3>Видання Limited Edition</h3>
+            <h2>Видання Limited Edition</h2>
             <p>Дизайн</p>
           </li>
 
           <li>
             <img src="./photo/project8.jpg" alt="логотип бренду" width="400" />
-            <h3>Проєкт LAB</h3>
+            <h2>Проєкт LAB</h2>
             <p>Маркетинг</p>
           </li>
 
@@ -126,7 +122,7 @@
               alt="відкритий ноутбук зі зоображенням сайту"
               width="400"
             />
-            <h3>Growing Business</h3>
+            <h2>Growing Business</h2>
             <p>Додаток</p>
           </li>
         </ul>
@@ -136,7 +132,7 @@
     <!--підвал-->
 
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
 
       <address>
         <ul>
