--- a/index.html
+++ b/index.html
@@ -5,66 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--заголовок-->
 
-    <header>
+    <header class="header-link">
       <nav>
-        <a href="/">WebStudio</a>
+        <a class="logo" href="./index.html"
+          ><span class="logo-accent">Web</span
+          ><span class="logo-foter">Studio</span></a
+        >
 
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="list">
+          <li><a class="menu1" href="./index.html">Студія</a></li>
+          <li>
+            <a class="menu2" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li><a class="menu3" href="">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li><a class="mail" href="">info@devstudio.com</a></li>
+        <li><a class="tel" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <!--шапка-->
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="main-hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="button-main" type="button">Замовити послугу</button>
       </section>
 
       <!--переваги-->
 
-      <section>
+      <section class="section1">
         <h2>Наші переваги</h2>
 
-        <ul>
+        <ul class="list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="section-subtitle">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
 
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="section-subtitle">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
 
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="section-title">ПЛАНУВАННЯ</h3>
+            <p class="section-subtitle">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
 
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="section-subtitle">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -74,22 +86,22 @@
 
       <!--чим займаємось-->
 
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="section2">
+        <h2 class="main-title">Чим ми займаємося</h2>
+        <ul class="list">
           <li>
-            <img src="./photo/img1.jpg" alt="друкування коду" width="400" />
+            <img src="./photo/img1.jpg" alt="друкування коду" width="370" />
           </li>
 
           <li>
-            <img src="./photo/img2.jpg" alt="розробка додатків" width="400" />
+            <img src="./photo/img2.jpg" alt="розробка додатків" width="370" />
           </li>
 
           <li>
             <img
               src="./photo/img3.jpg"
               alt="планшет з яскровою картинкою"
-              width="400"
+              width="370"
             />
           </li>
         </ul>
@@ -97,47 +109,47 @@
 
       <!--викладачі-->
 
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+      <section class="section3">
+        <h2 class="main-title">Наша команда</h2>
+        <ul class="list">
+          <li class="img">
             <img
               src="./photo/imgteam1.jpg"
               alt="молодий чоловік в червоній рубащці і в окулярах"
-              width="400"
+              width="270"
             />
+            <h3 class="section-title">Ігор Дем'яненко</h3>
+            <p class="section-subtitle">Product Designer</p>
           </li>
 
-          <li>
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+          <li class="img">
             <img
               src="./photo/imgteam2.jpg"
               alt="молода дівчина за світлим волосям в піджаку і окулярах"
-              width="400"
+              width="270"
             />
+            <h3 class="section-title">Ольга Рєпіна</h3>
+            <p class="section-subtitle">Frontend Developer</p>
           </li>
 
-          <li>
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+          <li class="img">
             <img
               src="./photo/imgteam3.jpg"
               alt="молодий чоловік в світлій рубашці"
-              width="400"
+              width="270"
             />
+            <h3 class="section-title">Микола Тарасов</h3>
+            <p class="section-subtitle">Marketing</p>
           </li>
 
-          <li>
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+          <li class="img">
             <img
               src="./photo/imgteam4.jpg"
               alt="молодий чоловік в темній футболці і окулярах"
-              width="400"
+              width="270"
             />
+            <h3 class="section-title">Михайло Єрмаков</h3>
+            <p class="section-subtitle">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -145,22 +157,27 @@
 
     <!--підвал-->
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="main-hero">
+      <a class="logo" href="./index.html"
+        ><span style="color: #2196f3">Web</span
+        ><span style="color: #fff">Studio</span></a
+      >
 
-      <address>
-        <ul>
+      <address class="main-address">
+        <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+            <a class="address" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
 
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
