fnt-family,hover-focus,menu,line-height,bgc,section,

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         >
 
         <ul class="list">
-          <li><a class="menu1" href="./index.html">Студія</a></li>
+          <li><a class="menu" href="./index.html">Студія</a></li>
           <li>
-            <a class="menu2" href="./portfolio.html">Портфоліо</a>
+            <a class="menu" href="./portfolio.html">Портфоліо</a>
           </li>
-          <li><a class="menu3" href="">Контакти</a></li>
+          <li><a class="menu" href="">Контакти</a></li>
         </ul>
       </nav>
 
@@ -47,7 +47,7 @@
 
       <!--переваги-->
 
-      <section class="section1">
+      <section class="section">
         <h2>Наші переваги</h2>
 
         <ul class="list">
@@ -86,7 +86,7 @@
 
       <!--чим займаємось-->
 
-      <section class="section2">
+      <section class="section">
         <h2 class="main-title">Чим ми займаємося</h2>
         <ul class="list">
           <li>
@@ -109,7 +109,7 @@
 
       <!--викладачі-->
 
-      <section class="section3">
+      <section class="section-footer">
         <h2 class="main-title">Наша команда</h2>
         <ul class="list">
           <li class="img">
