--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,11 @@
         >
 
         <ul class="list">
-          <li><a class="menu1" href="./index.html">Студія</a></li>
+          <li><a class="menu" href="./index.html">Студія</a></li>
           <li>
-            <a class="menu2" href="./portfolio.html">Портфоліо</a>
+            <a class="menu" href="./portfolio.html">Портфоліо</a>
           </li>
-          <li><a class="menu3" href="">Контакти</a></li>
+          <li><a class="menu" href="">Контакти</a></li>
         </ul>
       </nav>
 
@@ -69,7 +69,7 @@
               alt="Веб-сайт на якому зоображені викладачі дві жінки і чоловік"
               width="370"
             />
-            <h2>Технокряк</h2>
+            <h2 class="section-title">Технокряк</h2>
             <p class="section-subtitle">Веб-сайт</p>
           </li>
 
